--- a/.github/workflows/dialyzer.yml
+++ b/.github/workflows/dialyzer.yml
@@ -11,17 +11,28 @@ jobs:
         otp: [24]
     steps:
       - uses: actions/checkout@v2
-      - uses: erlef/setup-beam@v1
+
+      - name: Set up Elixir
+        id: beam
+        uses: erlef/setup-beam@v1
         with:
           elixir-version: ${{ matrix.elixir }}
           otp-version: ${{ matrix.otp }}
-      - uses: actions/cache@v1
-        id: mix-cache-dialyzer
+
+      - name: Restore PLT cache
+        uses: actions/cache@v2
+        id: plt_cache
         with:
-          path: deps
-          key: ${{ runner.os }}-${{ matrix.otp }}-${{ matrix.elixir }}-mix-${{ hashFiles(format('{0}{1}', github.workspace, '/mix.lock')) }}
-      - name: Install Mix Dependencies
-        if: steps.mix-cache-dialyzer.outputs.cache-hit != 'true'
-        run: mix deps.get
-      - name: ===> Dialyzer
+          key: |
+            ${{ runner.os }}-${{ steps.beam.outputs.elixir-version }}-${{ steps.beam.outputs.otp-version }}-plt
+          restore-keys: |
+            ${{ runner.os }}-${{ steps.beam.outputs.elixir-version }}-${{ steps.beam.outputs.otp-version }}-plt
+          path: |
+            priv/plts
+
+      - name: Create PLTs
+        if: steps.plt_cache.outputs.cache-hit != 'true'
+        run: mix dialyzer --plt
+
+      - name: Run dialyzer
         run: mix dialyzer
