--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -11,17 +11,23 @@ jobs:
         otp: [24]
     steps:
       - uses: actions/checkout@v2
-      - uses: erlef/setup-beam@v1
+
+      - name: Set up Elixir
+        id: beam
+        uses: erlef/setup-beam@v1
         with:
           elixir-version: ${{ matrix.elixir }}
           otp-version: ${{ matrix.otp }}
-      - uses: actions/cache@v1
+      
+      - uses: actions/cache@v2
         id: mix-cache-format
         with:
           path: deps
-          key: ${{ runner.os }}-${{ matrix.otp }}-${{ matrix.elixir }}-mix-${{ hashFiles(format('{0}{1}', github.workspace, '/mix.lock')) }}
+          key: ${{ runner.os }}-${{ steps.beam.outputs.elixir-version }}-${{ steps.beam.outputs.otp-version }}-mix-${{ hashFiles(format('{0}{1}', github.workspace, '/mix.lock')) }}
+
       - name: Install Mix Dependencies
         if: steps.mix-cache-format.outputs.cache-hit != 'true'
         run: mix deps.get
-      - name: ===> FORMAT
+          
+      - name: Run mix format 
         run: mix format --check-formatted
