--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,23 +11,29 @@ jobs:
         otp: [24]
     steps:
       - uses: actions/checkout@v2
-      - uses: erlef/setup-beam@v1
+
+      - name: Set up Elixir
+        id: beam
+        uses: erlef/setup-beam@v1
         with:
           elixir-version: ${{ matrix.elixir }}
           otp-version: ${{ matrix.otp }}
-      - uses: actions/cache@v1
+
+      - uses: actions/cache@v2
         id: mix-cache-coverage
         with:
           path: deps
-          key: ${{ runner.os }}-${{ matrix.otp }}-${{ matrix.elixir }}-mix-${{ hashFiles(format('{0}{1}', github.workspace, '/mix.lock')) }}
-      - name: Install Mix Dependencies
+          key: ${{ runner.os }}-${{ steps.beam.outputs.elixir-version }}-${{ steps.beam.outputs.otp-version }}-mix-${{ hashFiles(format('{0}{1}', github.workspace, '/mix.lock')) }}
+
+      - name: Install mix dependencies
         if: steps.mix-cache-coverage.outputs.cache-hit != 'true'
         run: |
           mix local.rebar --force
           mix local.hex --force
           mix deps.get
           mix ecto.create
-      - name: ===> Verify Coverage and tests
+
+      - name: Run coveralls
         run: mix coveralls.html
     services:
       pg:
