--- a/.github/workflows/dialyzer.yml
+++ b/.github/workflows/dialyzer.yml
@@ -10,7 +10,7 @@ jobs:
         elixir: [1.13]
         otp: [24]
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
       - name: Set up Elixir
         id: beam
@@ -20,7 +20,7 @@ jobs:
           otp-version: ${{ matrix.otp }}
 
       - name: Restore PLT cache
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         id: plt_cache
         with:
           key: |
@@ -30,8 +30,15 @@ jobs:
           path: |
             priv/plts
 
+      - name: Dependencies cache
+        uses: actions/cache@v3
+        id: mix-cache
+        with:
+          path: deps
+          key: ${{ runner.os }}-${{ steps.beam.outputs.elixir-version }}-${{ steps.beam.outputs.otp-version }}-mix-${{ hashFiles(format('{0}{1}', github.workspace, '/mix.lock')) }}
+
       - name: Install mix dependencies
-        if: steps.mix-cache-format.outputs.cache-hit != 'true'
+        if: steps.mix-cache.outputs.cache-hit != 'true'
         run: mix deps.get
 
       - name: Create PLTs
